fix the social link issue(z-index)

--- a/src/components/Footer/Footer.scoped.scss
+++ b/src/components/Footer/Footer.scoped.scss
@@ -71,12 +71,19 @@ margin: 10px 10px 10px 10px;
 
 .social-media-list li:hover a {
   color: #000;
+  position: relative;
+  z-index: 1;
+ 
 }
+
+
 
 @media only screen and (max-width: 800px) {
   .footer-container {
     p {
       font-size:11px;
     }
+    .social-media-list li {margin: 10px 5px 10px 5px};
+    
   }
 }
